syntax = "proto3";
option go_package = "github.com/baopham/reminder";
package reminder;

message GetRequest {
  string id = 1;
}

message CreateRequest {
  string userId = 1;
  string name = 2;
  string description = 3;
  string url = 4;
}

message CreateResponse {
  string id = 1;
}

message ReminderResponse {
  string id = 1;
  string userId = 2;
  string name = 3;
  string description = 4;
  string url = 5;
}

service Reminder {
  rpc Get (GetRequest) returns (ReminderResponse) {}
  rpc Create (CreateRequest) returns (CreateResponse) {}
}
